@@ -1,3 +1,5 @@
+2006/4/25 -- released version 20060425_trunk
+
 2006/4/24 -- released version 20060424_trunk
 
 2006/4/23 -- released version 20060423_trunk
